--- a/website/hobbies.html
+++ b/website/hobbies.html
@@ -36,13 +36,13 @@
 <tr align="center" bgcolor="#97FA8B " >
 <td colspan="2" >Love Between Fairy and Devil</td>
 <td>Yu Shuxin and Dylan Wang</td>
-<td><img src="image/evil.PNG"></td>
+<td><img src="image/evil.png"></td>
 
 </tr>
 <tr align="center" bgcolor="#97FA8B " >
 <td colspan="2" >My Unicorn Girl</td>
 <td>Darren Chen and Sebrina Chen</td>
-<td><img src="image/unicorn.PNG"></td>
+<td><img src="image/unicorn.png"></td>
 </table>
 
 <br>
